// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChapterPanel > ChapterPanel — Snapshot Tests (F2.1-U1) > toMatchSnapshot — empty states > renders empty context chapter as snapshot 1`] = `
<DocumentFragment>
  <div
    class="_chapterPanel_44f7ef "
    data-chapter="context"
  >
    <div
      class="_chapterHeader_44f7ef"
    >
      <span
        class="_chapterTitle_44f7ef"
      >
        上下文
      </span>
      <span
        class="_chapterCount_44f7ef"
      >
        0
      </span>
    </div>
    <div
      class="_cardList_44f7ef"
    >
      <div
        class="_emptyState_44f7ef"
      >
        <svg
          fill="none"
          height="32"
          opacity="0.4"
          stroke="currentColor"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          width="32"
        >
          <rect
            height="18"
            rx="2"
            width="18"
            x="3"
            y="3"
          />
          <line
            x1="12"
            x2="12"
            y1="8"
            y2="16"
          />
          <line
            x1="8"
            x2="16"
            y1="12"
            y2="12"
          />
        </svg>
        <p>
          暂无限界上下文
        </p>
        <p>
          点击下方按钮添加
        </p>
      </div>
    </div>
    <div
      class="_chapterFooter_44f7ef"
    >
      <button
        class="_addCardBtn_44f7ef"
      >
        <svg
          fill="none"
          height="12"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="12"
        >
          <line
            x1="12"
            x2="12"
            y1="5"
            y2="19"
          />
          <line
            x1="5"
            x2="19"
            y1="12"
            y2="12"
          />
        </svg>
        添加限界上下文
      </button>
      <button
        class="_saveTemplateBtn_44f7ef"
        data-testid="save-as-template-btn"
        title="保存当前章节为自定义模板"
        type="button"
      >
        <svg
          fill="none"
          height="12"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="12"
        >
          <path
            d="M19 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11l5 5v11a2 2 0 0 1-2 2z"
          />
          <polyline
            points="17 21 17 13 7 13 7 21"
          />
          <polyline
            points="7 3 7 8 15 8"
          />
        </svg>
        保存为模板
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ChapterPanel > ChapterPanel — Snapshot Tests (F2.1-U1) > toMatchSnapshot — empty states > renders empty flow chapter as snapshot 1`] = `
<DocumentFragment>
  <div
    class="_chapterPanel_44f7ef "
    data-chapter="flow"
  >
    <div
      class="_chapterHeader_44f7ef"
    >
      <span
        class="_chapterTitle_44f7ef"
      >
        流程
      </span>
      <span
        class="_chapterCount_44f7ef"
      >
        0
      </span>
    </div>
    <div
      class="_cardList_44f7ef"
    >
      <div
        class="_emptyState_44f7ef"
      >
        <svg
          fill="none"
          height="32"
          opacity="0.4"
          stroke="currentColor"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          width="32"
        >
          <rect
            height="18"
            rx="2"
            width="18"
            x="3"
            y="3"
          />
          <line
            x1="12"
            x2="12"
            y1="8"
            y2="16"
          />
          <line
            x1="8"
            x2="16"
            y1="12"
            y2="12"
          />
        </svg>
        <p>
          暂无流程步骤
        </p>
        <p>
          点击下方按钮添加
        </p>
      </div>
    </div>
    <div
      class="_chapterFooter_44f7ef"
    >
      <button
        class="_addCardBtn_44f7ef"
      >
        <svg
          fill="none"
          height="12"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="12"
        >
          <line
            x1="12"
            x2="12"
            y1="5"
            y2="19"
          />
          <line
            x1="5"
            x2="19"
            y1="12"
            y2="12"
          />
        </svg>
        添加流程步骤
      </button>
      <button
        class="_saveTemplateBtn_44f7ef"
        data-testid="save-as-template-btn"
        title="保存当前章节为自定义模板"
        type="button"
      >
        <svg
          fill="none"
          height="12"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="12"
        >
          <path
            d="M19 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11l5 5v11a2 2 0 0 1-2 2z"
          />
          <polyline
            points="17 21 17 13 7 13 7 21"
          />
          <polyline
            points="7 3 7 8 15 8"
          />
        </svg>
        保存为模板
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ChapterPanel > ChapterPanel — Snapshot Tests (F2.1-U1) > toMatchSnapshot — empty states > renders empty requirement chapter as snapshot 1`] = `
<DocumentFragment>
  <div
    class="_chapterPanel_44f7ef "
    data-chapter="requirement"
  >
    <div
      data-testid="requirement-chapter"
      style="display: none;"
    />
    <div
      class="_chapterHeader_44f7ef"
    >
      <span
        class="_chapterTitle_44f7ef"
      >
        需求
      </span>
      <span
        class="_chapterCount_44f7ef"
      >
        0
      </span>
    </div>
    <div
      class="_cardList_44f7ef"
    >
      <div
        class="_emptyState_44f7ef"
      >
        <svg
          fill="none"
          height="32"
          opacity="0.4"
          stroke="currentColor"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          width="32"
        >
          <rect
            height="18"
            rx="2"
            width="18"
            x="3"
            y="3"
          />
          <line
            x1="12"
            x2="12"
            y1="8"
            y2="16"
          />
          <line
            x1="8"
            x2="16"
            y1="12"
            y2="12"
          />
        </svg>
        <p>
          暂无用户故事
        </p>
        <p>
          点击下方按钮添加
        </p>
      </div>
    </div>
    <div
      class="_chapterFooter_44f7ef"
    >
      <button
        class="_addCardBtn_44f7ef"
      >
        <svg
          fill="none"
          height="12"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="12"
        >
          <line
            x1="12"
            x2="12"
            y1="5"
            y2="19"
          />
          <line
            x1="5"
            x2="19"
            y1="12"
            y2="12"
          />
        </svg>
        添加用户故事
      </button>
      <button
        class="_saveTemplateBtn_44f7ef"
        data-testid="save-as-template-btn"
        title="保存当前章节为自定义模板"
        type="button"
      >
        <svg
          fill="none"
          height="12"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="12"
        >
          <path
            d="M19 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11l5 5v11a2 2 0 0 1-2 2z"
          />
          <polyline
            points="17 21 17 13 7 13 7 21"
          />
          <polyline
            points="7 3 7 8 15 8"
          />
        </svg>
        保存为模板
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ChapterPanel > ChapterPanel — Snapshot Tests (F2.1-U1) > toMatchSnapshot — states > renders error state as snapshot 1`] = `
<DocumentFragment>
  <div
    class="_chapterPanel_44f7ef "
    data-chapter="requirement"
  >
    <div
      data-testid="requirement-chapter"
      style="display: none;"
    />
    <div
      class="_chapterHeader_44f7ef"
    >
      <span
        class="_chapterTitle_44f7ef"
      >
        需求
      </span>
      <span
        class="_chapterCount_44f7ef"
      >
        0
      </span>
    </div>
    <div
      class="_cardList_44f7ef"
    >
      <div
        class="_errorState_44f7ef"
      >
        <svg
          fill="none"
          height="28"
          stroke="#ef4444"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          width="28"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <line
            x1="12"
            x2="12"
            y1="8"
            y2="12"
          />
          <line
            x1="12"
            x2="12.01"
            y1="16"
            y2="16"
          />
        </svg>
        <p
          class="_errorMessage_44f7ef"
        >
          加载失败，请重试
        </p>
        <button
          class="_retryBtn_44f7ef"
          type="button"
        >
          重试
        </button>
      </div>
    </div>
    <div
      class="_chapterFooter_44f7ef"
    >
      <button
        class="_addCardBtn_44f7ef"
      >
        <svg
          fill="none"
          height="12"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="12"
        >
          <line
            x1="12"
            x2="12"
            y1="5"
            y2="19"
          />
          <line
            x1="5"
            x2="19"
            y1="12"
            y2="12"
          />
        </svg>
        添加用户故事
      </button>
      <button
        class="_saveTemplateBtn_44f7ef"
        data-testid="save-as-template-btn"
        title="保存当前章节为自定义模板"
        type="button"
      >
        <svg
          fill="none"
          height="12"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="12"
        >
          <path
            d="M19 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11l5 5v11a2 2 0 0 1-2 2z"
          />
          <polyline
            points="17 21 17 13 7 13 7 21"
          />
          <polyline
            points="7 3 7 8 15 8"
          />
        </svg>
        保存为模板
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ChapterPanel > ChapterPanel — Snapshot Tests (F2.1-U1) > toMatchSnapshot — states > renders loading state as snapshot 1`] = `
<DocumentFragment>
  <div
    class="_chapterPanel_44f7ef "
    data-chapter="requirement"
  >
    <div
      data-testid="requirement-chapter"
      style="display: none;"
    />
    <div
      class="_chapterHeader_44f7ef"
    >
      <span
        class="_chapterTitle_44f7ef"
      >
        需求
      </span>
      <span
        class="_chapterCount_44f7ef"
      >
        0
      </span>
    </div>
    <div
      class="_cardList_44f7ef"
    >
      <div
        class="_skeletonList_44f7ef"
      >
        <div
          class="_skeletonCard_44f7ef"
        >
          <div
            class="_skeletonBadge_44f7ef"
          />
          <div
            class="_skeletonLine_44f7ef"
            style="width: 60%;"
          />
          <div
            class="_skeletonLine_44f7ef"
            style="width: 80%;"
          />
          <div
            class="_skeletonLine_44f7ef"
            style="width: 40%;"
          />
        </div>
        <div
          class="_skeletonCard_44f7ef"
        >
          <div
            class="_skeletonBadge_44f7ef"
          />
          <div
            class="_skeletonLine_44f7ef"
            style="width: 60%;"
          />
          <div
            class="_skeletonLine_44f7ef"
            style="width: 80%;"
          />
          <div
            class="_skeletonLine_44f7ef"
            style="width: 40%;"
          />
        </div>
        <div
          class="_skeletonCard_44f7ef"
        >
          <div
            class="_skeletonBadge_44f7ef"
          />
          <div
            class="_skeletonLine_44f7ef"
            style="width: 60%;"
          />
          <div
            class="_skeletonLine_44f7ef"
            style="width: 80%;"
          />
          <div
            class="_skeletonLine_44f7ef"
            style="width: 40%;"
          />
        </div>
      </div>
    </div>
    <div
      class="_chapterFooter_44f7ef"
    >
      <button
        class="_addCardBtn_44f7ef"
      >
        <svg
          fill="none"
          height="12"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="12"
        >
          <line
            x1="12"
            x2="12"
            y1="5"
            y2="19"
          />
          <line
            x1="5"
            x2="19"
            y1="12"
            y2="12"
          />
        </svg>
        添加用户故事
      </button>
      <button
        class="_saveTemplateBtn_44f7ef"
        data-testid="save-as-template-btn"
        title="保存当前章节为自定义模板"
        type="button"
      >
        <svg
          fill="none"
          height="12"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="12"
        >
          <path
            d="M19 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11l5 5v11a2 2 0 0 1-2 2z"
          />
          <polyline
            points="17 21 17 13 7 13 7 21"
          />
          <polyline
            points="7 3 7 8 15 8"
          />
        </svg>
        保存为模板
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ChapterPanel > ChapterPanel — Snapshot Tests (F2.1-U1) > toMatchSnapshot — with cards > renders requirement chapter with 1 card as snapshot 1`] = `
<DocumentFragment>
  <div
    class="_chapterPanel_44f7ef "
    data-chapter="requirement"
  >
    <div
      data-testid="requirement-chapter"
      style="display: none;"
    />
    <div
      class="_chapterHeader_44f7ef"
    >
      <span
        class="_chapterTitle_44f7ef"
      >
        需求
      </span>
      <span
        class="_chapterCount_44f7ef"
      >
        1
      </span>
    </div>
    <div
      class="_cardList_44f7ef"
    >
      <div
        role="list"
        style="position: relative; max-height: 100%; overflow-y: auto; flex: 1 1 0%; min-height: 0px; overflow: auto;"
      >
        <div
          data-react-window-index="0"
          style="position: absolute; left: 0px; transform: translateY(0px); height: 120px; width: 100%;"
        >
          <div
            class="_cardItem_44f7ef "
            role="button"
            tabindex="0"
          >
            <div
              class="_cardItemContent_44f7ef"
            >
              <div
                aria-label="User Story: Story 1"
                class="_container_0ad03c "
                role="button"
                tabindex="0"
              >
                <div
                  class="_header_0ad03c"
                >
                  <h3
                    class="_title_0ad03c"
                  >
                    Story 1
                  </h3>
                  <span
                    class="_priorityBadge_0ad03c _priorityHigh_0ad03c"
                  >
                    高
                  </span>
                </div>
                <div
                  class="_storyBody_0ad03c"
                >
                  <div
                    class="_storyLine_0ad03c"
                  >
                    <span
                      class="_roleLabel_0ad03c"
                    >
                      作为
                    </span>
                    <span>
                      user
                    </span>
                  </div>
                  <div
                    class="_storyLine_0ad03c"
                  >
                    <span
                      class="_actionLabel_0ad03c"
                    >
                      我想要
                    </span>
                    <span>
                      login
                    </span>
                  </div>
                  <div
                    class="_storyLine_0ad03c"
                  >
                    <span
                      class="_benefitLabel_0ad03c"
                    >
                      以便于
                    </span>
                    <span>
                      access account
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <button
              aria-label="删除卡片"
              class="_deleteBtn_44f7ef"
              title="删除卡片"
            >
              <svg
                fill="none"
                height="14"
                stroke="currentColor"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="14"
              >
                <polyline
                  points="3 6 5 6 21 6"
                />
                <path
                  d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          aria-hidden="true"
          style="height: 120px; width: 100%; z-index: -1;"
        />
      </div>
    </div>
    <div
      class="_chapterFooter_44f7ef"
    >
      <button
        class="_addCardBtn_44f7ef"
      >
        <svg
          fill="none"
          height="12"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="12"
        >
          <line
            x1="12"
            x2="12"
            y1="5"
            y2="19"
          />
          <line
            x1="5"
            x2="19"
            y1="12"
            y2="12"
          />
        </svg>
        添加用户故事
      </button>
      <button
        class="_saveTemplateBtn_44f7ef"
        data-testid="save-as-template-btn"
        title="保存当前章节为自定义模板"
        type="button"
      >
        <svg
          fill="none"
          height="12"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="12"
        >
          <path
            d="M19 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11l5 5v11a2 2 0 0 1-2 2z"
          />
          <polyline
            points="17 21 17 13 7 13 7 21"
          />
          <polyline
            points="7 3 7 8 15 8"
          />
        </svg>
        保存为模板
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ChapterPanel > ChapterPanel — Snapshot Tests (F2.1-U1) > toMatchSnapshot — with cards > renders requirement chapter with 3 cards as snapshot 1`] = `
<DocumentFragment>
  <div
    class="_chapterPanel_44f7ef "
    data-chapter="requirement"
  >
    <div
      data-testid="requirement-chapter"
      style="display: none;"
    />
    <div
      class="_chapterHeader_44f7ef"
    >
      <span
        class="_chapterTitle_44f7ef"
      >
        需求
      </span>
      <span
        class="_chapterCount_44f7ef"
      >
        3
      </span>
    </div>
    <div
      class="_cardList_44f7ef"
    >
      <div
        role="list"
        style="position: relative; max-height: 100%; overflow-y: auto; flex: 1 1 0%; min-height: 0px; overflow: auto;"
      >
        <div
          data-react-window-index="0"
          style="position: absolute; left: 0px; transform: translateY(0px); height: 120px; width: 100%;"
        >
          <div
            class="_cardItem_44f7ef "
            role="button"
            tabindex="0"
          >
            <div
              class="_cardItemContent_44f7ef"
            >
              <div
                aria-label="User Story: Story 1"
                class="_container_0ad03c "
                role="button"
                tabindex="0"
              >
                <div
                  class="_header_0ad03c"
                >
                  <h3
                    class="_title_0ad03c"
                  >
                    Story 1
                  </h3>
                  <span
                    class="_priorityBadge_0ad03c _priorityHigh_0ad03c"
                  >
                    高
                  </span>
                </div>
                <div
                  class="_storyBody_0ad03c"
                >
                  <div
                    class="_storyLine_0ad03c"
                  >
                    <span
                      class="_roleLabel_0ad03c"
                    >
                      作为
                    </span>
                    <span>
                      user
                    </span>
                  </div>
                  <div
                    class="_storyLine_0ad03c"
                  >
                    <span
                      class="_actionLabel_0ad03c"
                    >
                      我想要
                    </span>
                    <span>
                      login
                    </span>
                  </div>
                  <div
                    class="_storyLine_0ad03c"
                  >
                    <span
                      class="_benefitLabel_0ad03c"
                    >
                      以便于
                    </span>
                    <span>
                      access account
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <button
              aria-label="删除卡片"
              class="_deleteBtn_44f7ef"
              title="删除卡片"
            >
              <svg
                fill="none"
                height="14"
                stroke="currentColor"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="14"
              >
                <polyline
                  points="3 6 5 6 21 6"
                />
                <path
                  d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          data-react-window-index="1"
          style="position: absolute; left: 0px; transform: translateY(120px); height: 120px; width: 100%;"
        >
          <div
            class="_cardItem_44f7ef "
            role="button"
            tabindex="0"
          >
            <div
              class="_cardItemContent_44f7ef"
            >
              <div
                aria-label="User Story: Story 2"
                class="_container_0ad03c "
                role="button"
                tabindex="0"
              >
                <div
                  class="_header_0ad03c"
                >
                  <h3
                    class="_title_0ad03c"
                  >
                    Story 2
                  </h3>
                  <span
                    class="_priorityBadge_0ad03c _priorityHigh_0ad03c"
                  >
                    高
                  </span>
                </div>
                <div
                  class="_storyBody_0ad03c"
                >
                  <div
                    class="_storyLine_0ad03c"
                  >
                    <span
                      class="_roleLabel_0ad03c"
                    >
                      作为
                    </span>
                    <span>
                      user
                    </span>
                  </div>
                  <div
                    class="_storyLine_0ad03c"
                  >
                    <span
                      class="_actionLabel_0ad03c"
                    >
                      我想要
                    </span>
                    <span>
                      login
                    </span>
                  </div>
                  <div
                    class="_storyLine_0ad03c"
                  >
                    <span
                      class="_benefitLabel_0ad03c"
                    >
                      以便于
                    </span>
                    <span>
                      access account
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <button
              aria-label="删除卡片"
              class="_deleteBtn_44f7ef"
              title="删除卡片"
            >
              <svg
                fill="none"
                height="14"
                stroke="currentColor"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="14"
              >
                <polyline
                  points="3 6 5 6 21 6"
                />
                <path
                  d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          data-react-window-index="2"
          style="position: absolute; left: 0px; transform: translateY(240px); height: 120px; width: 100%;"
        >
          <div
            class="_cardItem_44f7ef "
            role="button"
            tabindex="0"
          >
            <div
              class="_cardItemContent_44f7ef"
            >
              <div
                aria-label="User Story: Story 3"
                class="_container_0ad03c "
                role="button"
                tabindex="0"
              >
                <div
                  class="_header_0ad03c"
                >
                  <h3
                    class="_title_0ad03c"
                  >
                    Story 3
                  </h3>
                  <span
                    class="_priorityBadge_0ad03c _priorityHigh_0ad03c"
                  >
                    高
                  </span>
                </div>
                <div
                  class="_storyBody_0ad03c"
                >
                  <div
                    class="_storyLine_0ad03c"
                  >
                    <span
                      class="_roleLabel_0ad03c"
                    >
                      作为
                    </span>
                    <span>
                      user
                    </span>
                  </div>
                  <div
                    class="_storyLine_0ad03c"
                  >
                    <span
                      class="_actionLabel_0ad03c"
                    >
                      我想要
                    </span>
                    <span>
                      login
                    </span>
                  </div>
                  <div
                    class="_storyLine_0ad03c"
                  >
                    <span
                      class="_benefitLabel_0ad03c"
                    >
                      以便于
                    </span>
                    <span>
                      access account
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <button
              aria-label="删除卡片"
              class="_deleteBtn_44f7ef"
              title="删除卡片"
            >
              <svg
                fill="none"
                height="14"
                stroke="currentColor"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="14"
              >
                <polyline
                  points="3 6 5 6 21 6"
                />
                <path
                  d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          aria-hidden="true"
          style="height: 360px; width: 100%; z-index: -1;"
        />
      </div>
    </div>
    <div
      class="_chapterFooter_44f7ef"
    >
      <button
        class="_addCardBtn_44f7ef"
      >
        <svg
          fill="none"
          height="12"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="12"
        >
          <line
            x1="12"
            x2="12"
            y1="5"
            y2="19"
          />
          <line
            x1="5"
            x2="19"
            y1="12"
            y2="12"
          />
        </svg>
        添加用户故事
      </button>
      <button
        class="_saveTemplateBtn_44f7ef"
        data-testid="save-as-template-btn"
        title="保存当前章节为自定义模板"
        type="button"
      >
        <svg
          fill="none"
          height="12"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="12"
        >
          <path
            d="M19 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11l5 5v11a2 2 0 0 1-2 2z"
          />
          <polyline
            points="17 21 17 13 7 13 7 21"
          />
          <polyline
            points="7 3 7 8 15 8"
          />
        </svg>
        保存为模板
      </button>
    </div>
  </div>
</DocumentFragment>
`;

